--- a/templates/auth-bypass.yml.j2
+++ b/templates/auth-bypass.yml.j2
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth
+  name: auth-bypass
   labels:
-    app: auth
+    app: auth-bypass
 spec:
   type: ClusterIP
   ports:
@@ -12,19 +12,19 @@ spec:
       port: 80
       targetPort: 80
   selector:
-    app: auth
+    app: auth-bypass
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth
+  name: auth-bypass
   labels:
-    app: auth
+    app: auth-bypass
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: auth-bypass
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -34,11 +34,11 @@ spec:
   template:
     metadata:
       labels:
-        app: auth
+        app: auth-bypass
     spec:
       restartPolicy: Always
       containers:
-        - name: auth
+        - name: auth-bypass
           image: "{{ auth_image }}"
           env:
             - name: DEPLOY_TIME
@@ -46,7 +46,7 @@ spec:
             - name: APP_PORT
               value: "{{ auth_port }}"
             - name: APP_BASE
-              value: "{{ auth_path }}"
+              value: "{{ auth_bypass_path }}"
             - name: APP_MONGODB_CONNECTION
               value: "{{ auth_mongodb_connection }}"
             - name: APP_SUPER_USERNAME
